--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="star_fix"></div>
 <div class="star"></div>
 <div class="text">
-    <p>Just take a meal and chill a bit, you deserved this</p>
+    <p>Just take a meal and chill a bit, you deserved it</p>
 </div>
 </body>
 </html>
