--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>Chill a bit</title>
+    <title>Themes</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="canvas.js"></script>
 </head>
 <body>
-<iframe src="audio/lofi.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
-<audio id="player" autoplay loop>
-    <source src="audio/lofi.mp3" type="audio/mp3">
-</audio>
-<div class="star_fix"></div>
-<div class="star"></div>
-<div class="text">
-    <p>Just take a meal and chill a bit, you deserved it</p>
-</div>
+<canvas id="theme"></canvas>
 </body>
 </html>
